# epam_python_test

./: README.md  epam_python_exercises.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code_quality.yml  python-app.yml
src/epam_python_exercises/: __init__.py
tests/: test_exercises.py
